# meta_hack

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  deploy_to_hf.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  sync_repo.py
server/: app.py
server/env/: __init__.py  data_gen.py  environment.py  graders.py  tasks.py
server/static/: app.js  index.html  style.css
tests/: test_graders.py
